# technical_task

./: Procfile  README.md  Test Flask app.postman_collection.json  api_task.py  app.py  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
features/: add_device.feature
features/steps/: add_device_steps.py
tests/: test_add_device.py  test_add_reservation.py  test_delete_device.py  test_delete_reservation.py  test_get_reservations.py
