[metadata]
name = api_task
description = covers needed api
author = Elizabete Akermane
platforms = win64
classifiers =
    Programming Language :: Python :: 3.8


[options]
packages =
    task
install_requires =
    requests>=2
    Flask>=2
python_requires = >=3.6
package_dir =
    =source
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1.2
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
task = py.typed

[flake8]
max-line-length = 160